Project

General

Profile

Actions

Bug #50978

closed

unaligned access to member variables of crush_work_bucket

Added by Kefu Chai almost 3 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
nautilus, octopus, pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when compiled with ASan, it complains like

../src/crush/mapper.c:881:22: runtime error: member access within misaligned address 0x7ffe051f90dc for type 'struct crush_work_bucket', which requires 8 byte alignment
0x7ffe051f90dc: note: pointer points here
  1d e5 77 3d 68 55 00 00  00 00 00 00 00 00 00 00  20 93 1f 05 fe 7f 00 00  10 91 1f 05 fe 7f 00 00
              ^
../src/crush/mapper.c:882:22: runtime error: member access within misaligned address 0x7ffe051f90dc for type 'struct crush_work_bucket', which requires 8 byte alignment
0x7ffe051f90dc: note: pointer points here
  1d e5 77 3d 00 00 00 00  00 00 00 00 00 00 00 00  20 93 1f 05 fe 7f 00 00  10 91 1f 05 fe 7f 00 00
              ^
../src/crush/mapper.c:883:20: runtime error: member access within misaligned address 0x7ffe051f90dc for type 'struct crush_work_bucket', which requires 8 byte alignment
0x7ffe051f90dc: note: pointer points here
  1d e5 77 3d 00 00 00 00  00 00 00 00 00 00 00 00  20 93 1f 05 fe 7f 00 00  10 91 1f 05 fe 7f 00 00
              ^


Related issues 3 (0 open3 closed)

Copied to RADOS - Backport #50985: nautilus: unaligned access to member variables of crush_work_bucketRejectedActions
Copied to RADOS - Backport #50986: pacific: unaligned access to member variables of crush_work_bucketResolvedNeha OjhaActions
Copied to RADOS - Backport #50987: octopus: unaligned access to member variables of crush_work_bucketResolvedCory SnyderActions
Actions #1

Updated by Kefu Chai almost 3 years ago

  • Assignee set to Kefu Chai
Actions #2

Updated by Kefu Chai almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50985: nautilus: unaligned access to member variables of crush_work_bucket added
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50986: pacific: unaligned access to member variables of crush_work_bucket added
Actions #5

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50987: octopus: unaligned access to member variables of crush_work_bucket added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #7

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF